[package]
name = "flowstate"
version = "0.2.36"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "flowstate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Default: lean binary. Node.js + provider SDK bridges download from
# the release on first launch and cache under `~/.cache/zenui/`. The
# daemon's `provision_runtimes()` step front-loads this so the first
# launch blocks once, not piecemeal on every provider's first call.
default = []
# Opt-in: bake everything into the binary — useful for offline /
# air-gapped distribution. Forwards to each provider crate's per-crate
# `embed` feature via `flowstate-app-layer`. Every downstream
# consumer that wants the fully-embedded build takes this single
# feature rather than hand-wiring each provider.
embed-all = [
    "flowstate-app-layer/embed-all",
    "zenui-provider-claude-sdk/embed",
    "zenui-provider-github-copilot/embed",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Auto-updater. Pulls signed manifests from the URL configured in
# tauri.conf.json (`plugins.updater.endpoints`) and verifies them
# against the embedded `pubkey`. The matching private key lives
# only as the `TAURI_SIGNING_PRIVATE_KEY` GitHub secret used by
# the release workflow — losing it means losing the ability to
# ship updates to existing installs.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Global keyboard shortcut (Cmd+Option+Shift+O) for window toggle.
# Uses Carbon `RegisterEventHotKey` on macOS, so no Accessibility
# permission / entitlements are required. Registration is Rust-only
# in `lib.rs` setup — no frontend capability entry needed.
tauri-plugin-global-shortcut = "2"
dirs.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64.workspace = true

# Daemon core with just the Tauri transport. Providers are no longer
# a daemon-core concern — flowstate constructs its own adapter vector
# below and passes it into `DaemonConfig::adapters`. transport-tauri
# is re-exported by daemon-core as `zenui_daemon_core::transport_tauri`.
zenui-daemon-core = { path = "../../../crates/middleman/daemon-core", features = ["transport-tauri"] }

# Loopback HTTP transport mounted alongside the Tauri transport. Both
# share the same `Arc<RuntimeCore>` so every route it serves reflects
# current runtime state. Used by the per-session MCP subprocesses
# that opencode / Copilot SDK / CLIs spawn — they hit
# `/api/orchestration/{catalog,dispatch}` on this loopback port.
# Binds `127.0.0.1:0` (ephemeral port, loopback only); auth is a
# bearer token written to the handshake file under the app's data
# dir. Not reachable from other hosts on the LAN.
zenui-transport-http = { path = "../../../crates/middleman/transport-http" }

# App-owned state (user_config, usage analytics, orchestration adapter
# impls, git-worktree helpers). Extracted in Phase 3 — the future
# `flowstate-daemon` binary (Phase 6) will link the same crate, so
# flowstate and the daemon agree on SQLite schemas and worktree
# provisioning logic without either depending on Tauri.
flowstate-app-layer = { path = "../../../crates/app-layer" }

# Provider adapters the app wants to expose. Construction happens in
# `src/lib.rs`; keeping the path deps here makes the set of supported
# providers a single-file edit for downstream apps.
zenui-provider-claude-sdk = { path = "../../../crates/core/provider-claude-sdk" }
zenui-provider-claude-cli = { path = "../../../crates/core/provider-claude-cli" }
zenui-provider-codex = { path = "../../../crates/core/provider-codex" }
zenui-provider-github-copilot = { path = "../../../crates/core/provider-github-copilot" }
zenui-provider-github-copilot-cli = { path = "../../../crates/core/provider-github-copilot-cli" }
zenui-provider-opencode = { path = "../../../crates/core/provider-opencode" }

# Types used in Tauri commands
zenui-provider-api = { path = "../../../crates/core/provider-api" }
zenui-runtime-core = { path = "../../../crates/core/runtime-core" }

# The MCP stdio server is packaged as a library and exposed by the
# main flowstate binary as a `flowstate mcp-server …` subcommand.
# Argv dispatch in `src/main.rs` picks this path before Tauri's
# builder runs, so one binary covers both the UI and the per-session
# MCP subprocess that opencode / Copilot SDK / the CLIs spawn.
flowstate-mcp-server = { path = "../../../crates/core/mcp-server" }

# Async + error handling
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Integrated terminal — PTY allocation and process spawn. Powers the
# Cmd+J dock. Cross-platform (UNIX openpty, Windows ConPTY) via
# wezterm's battle-tested abstraction.
portable-pty = "0.9"

# Flowstate-app-owned key/value store for user-tunable settings
# (highlighter pool size, future tweaks). Lives in its own SQLite
# file under Tauri's app_data_dir, intentionally separate from the
# agent SDK's persistence — the SDK owns session/agent state, the
# app owns app-level configuration. The rusqlite version matches
# what the SDK uses transitively so libsqlite3-sys can be shared
# across the dependency graph (Cargo refuses two crates linking to
# the same native `sqlite3` library at different versions).
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# File-finder + grep SDK backing the /code view's picker and content
# search. Replaces the ripgrep-stack (`ignore` + `grep-regex` +
# `grep-searcher`) we briefly bounced back to in `53993c5` — that
# revert was triggered by fff-search's *defaults* silently dropping
# matches (200 hits/file, 4 MiB file cap, 2 s cold-open cut, 90+
# binary-extension skips, 50 % fuzzy threshold). Those are the knobs
# in `src/file_index.rs`; we now disable / widen every one of them so
# the picker never silently truncates on a 100k-file repo.
#
# Build-time gotcha: fff-search's `build.rs` panics under `CI=true`
# even without the `zlob` feature enabled. Every workflow step that
# compiles this crate uses `env -u CI` (or `CI: "false"`) — search
# `.github/workflows/*.yml` for the rationale inline. Local dev is
# unaffected because shells don't set `CI=true`.
fff-search = "0.5.2"
# `dunce::canonicalize` returns a plain `C:\...` path on Windows
# instead of `std::fs::canonicalize`'s extended-length `\\?\C:\...`
# form. The fff-search background watcher receives notify events
# with non-extended paths and calls `strip_prefix` against the
# registered root; if we register a `\\?\` root, every event errors
# out with `StripPrefixError`. dunce sidesteps that by handing back
# the same shape the watcher delivers. No-op on Unix.
dunce = "1.0"
# Compile user-supplied include/exclude globs (`*.rs`, `target/*`) for
# pre-filtering the indexed file list before content search.
globset = "0.4.18"
# Retained for `list_directory` (the lazy file tree, which still wants
# the gitignore-aware walker for its single-level reads). The picker
# and content search go through fff-search now.
ignore = "0.4"

# Process enumeration for the startup orphan scan (see
# `src/orphan_scan.rs`). The scan walks every running process at
# startup and SIGTERMs any `opencode serve` / `flowstate mcp-server`
# whose parent is PID 1 — these are leftovers from a prior flowstate
# that was SIGKILL'd (common during `tauri dev` hot-reload). Default
# features off keeps the binary size hit minimal; we only need
# process enumeration, not CPU/memory/disk stats.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# HTTP client for Phase 5 — the DaemonClient proxies Tauri commands
# over the loopback HTTP surface (phase 6 flips the base URL from
# in-process to a separate daemon without touching the command
# bodies). rustls avoids a system OpenSSL dependency and matches
# what every other in-tree reqwest user pins.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# `libc::kill(pid, SIGTERM)` for the orphan scan. Unix-only — Windows
# process trees don't orphan in the same way, and flowstate doesn't
# ship a Windows dev-reload SIGKILL path to worry about.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only deps for `install_cli`: `winreg` to prepend the
# CLI install dir to HKCU\Environment\Path, and `windows-sys`
# for the `SendMessageTimeoutW(HWND_BROADCAST, WM_SETTINGCHANGE,
# …)` call that nudges newly-launched shells to pick up the new
# PATH without a logout.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
