[package]
name = "zenui-persistence"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
parking_lot = "0.12"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
uuid.workspace = true
zenui-provider-api = { path = "../provider-api" }
