[package]
name = "zenui-provider-api"
version.workspace = true
edition.workspace = true
publish = false

[features]
# Phase 0.2 safety net. When enabled, every wire type in this crate
# additionally derives `ts_rs::TS`. The integration test
# `tests/ts_bindings.rs` uses that to generate
# `apps/flowstate/src/lib/generated/types.ts`, and CI asserts drift via
# `git diff --exit-code` on that file.
#
# Deliberately opt-in: production builds (daemon, Tauri app) don't
# enable it, so `ts-rs` stays out of the release dependency tree.
ts-bindings = ["dep:ts-rs"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
ts-rs = { version = "12", features = ["serde-compat", "serde-json-impl"], optional = true }

[dev-dependencies]
tempfile.workspace = true
# `test-util` enables `tokio::time::pause` / `#[tokio::test(start_paused = true)]`
# so our watchdog tests run on a virtual clock instead of burning real seconds.
tokio = { workspace = true, features = ["test-util"] }
