[package]
name = "zenui-provider-api"
version.workspace = true
edition.workspace = true
publish = false

[features]
# Phase 0.2 safety net. When enabled, every wire type in this crate
# additionally derives `ts_rs::TS`. The integration test
# `tests/ts_bindings.rs` uses that to generate
# `apps/flowstate/src/lib/generated/types.ts`, and CI asserts drift via
# `git diff --exit-code` on that file.
#
# Deliberately opt-in: production builds (daemon, Tauri app) don't
# enable it, so `ts-rs` stays out of the release dependency tree.
ts-bindings = ["dep:ts-rs"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
ts-rs = { version = "12", features = ["serde-compat", "serde-json-impl"], optional = true }

# `killpg` / `setpgid` for the shared process-group helpers every
# provider adapter uses at spawn + drop time — see `process_group.rs`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows Job Objects are the cross-platform analogue of Unix process
# groups for `process_group.rs`. CreateJobObjectW + AssignProcessToJobObject
# + TerminateJobObject pull from JobObjects; CloseHandle / HANDLE come
# from Foundation.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    # `CreateJobObjectW` takes a `*const SECURITY_ATTRIBUTES` (we pass
    # null), so the function declaration is gated behind Win32_Security
    # in windows-sys 0.59.
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
# `test-util` enables `tokio::time::pause` / `#[tokio::test(start_paused = true)]`
# so our watchdog tests run on a virtual clock instead of burning real seconds.
tokio = { workspace = true, features = ["test-util"] }
