[package]
name = "zenui-provider-claude-sdk"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zenui-provider-api = { path = "../provider-api" }
