[package]
name = "zenui-provider-claude-sdk"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs = "5"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zenui-embedded-node = { path = "../embedded-node" }
zenui-provider-api = { path = "../provider-api" }
