[package]
name = "zenui-provider-github-copilot-cli"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zenui-provider-api = { path = "../provider-api" }
