[package]
name = "zenui-provider-github-copilot"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
# See `provider-claude-sdk` for the full rationale — this mirrors it.
default = []
embed = ["zenui-embedded-node/embed"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zenui-embedded-node = { path = "../embedded-node", default-features = false }
zenui-provider-api = { path = "../provider-api" }
