[package]
name = "zenui-provider-opencode"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zenui-provider-api = { path = "../provider-api" }

# HTTP + SSE client for the `opencode serve` backend. rustls avoids
# dragging a system OpenSSL across macOS / Linux / Windows builds.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Small, dependency-light random for the server password.
rand = "0.8"

# Process-group control for `opencode serve`: the child is placed in
# its own process group so shutdown can `killpg(SIGTERM)` the whole
# subtree (opencode + any mcp-server subprocesses opencode spawned for
# its own agent sessions). Without this the Drop handler only reaps
# the direct child and the grandchildren orphan. Unix-only; Windows
# opencode deployments don't exist yet.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Used by `tests/` and the in-tree `mod tests` for scratch dirs that
# back the `opencode.json` writer's smoke tests. Workspace-pinned
# version stays in sync with the rest of the codebase.
tempfile = "3"

# Build-time codegen: parse the committed `/doc` snapshot
# (`tests/fixtures/openapi-<ver>.json`) and emit `spec_types.rs` into
# OUT_DIR. Keeps the Rust types mechanically derived from the spec, so
# any drift surfaces as a regenerated diff rather than as a runtime
# JSON shape mismatch. See `build.rs` and `src/spec_types.rs` (the
# `include!` site).
[build-dependencies]
serde_json = "1"
