[package]
name = "zenui-runtime-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zenui-orchestration = { path = "../orchestration" }
zenui-persistence = { path = "../persistence" }
zenui-provider-api = { path = "../provider-api" }

[dev-dependencies]
async-trait.workspace = true
