[package]
name = "zenui-runtime-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zenui-orchestration = { path = "../orchestration" }
zenui-persistence = { path = "../persistence" }
zenui-provider-api = { path = "../provider-api" }
