[package]
name = "zenui-runtime-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zenui-persistence = { path = "../persistence" }
zenui-provider-api = { path = "../provider-api" }

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` so tests exercising
# deliberate in-adapter sleeps run on a virtual clock instead of real time.
tokio = { workspace = true, features = ["test-util"] }
