[package]
name = "zenui-daemon-core"
version.workspace = true
edition.workspace = true
publish = false

[features]
# Nothing on by default — each transport must be opted in by the
# consumer. Concrete providers are no longer a daemon-core concern:
# the hosting app constructs its own `Vec<Arc<dyn ProviderAdapter>>`
# and stuffs it into `DaemonConfig::adapters`. This keeps the
# "middleman bridges lifecycle + transport; it never picks providers"
# layering rule honest.
default = []

# Transports. Each concrete transport is an optional dep; daemon-core
# re-exports it under the matching feature so consumers only need a
# single `zenui-daemon-core` line in their Cargo.toml.
transport-tauri = ["dep:zenui-transport-tauri"]
transport-http = ["dep:zenui-transport-http"]
all-transports = ["transport-tauri", "transport-http"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenui-persistence = { path = "../../core/persistence" }
zenui-provider-api = { path = "../../core/provider-api" }
zenui-runtime-core = { path = "../../core/runtime-core" }
zenui-transport-tauri = { path = "../transport-tauri", optional = true }
zenui-transport-http = { path = "../transport-http", optional = true }

[dev-dependencies]
tempfile.workspace = true
