[package]
name = "zenui-transport-http"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
mime_guess = "2"
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zenui-provider-api = { path = "../../core/provider-api" }
zenui-runtime-core = { path = "../../core/runtime-core" }
