[package]
name = "zenui-transport-http"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zenui-provider-api = { path = "../../core/provider-api" }
zenui-runtime-core = { path = "../../core/runtime-core" }
